Tue Aug 26 12:25:40 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

   * configure.in: removed AC_FUNC_MKTIME because it may not work properly
     and added default replacement directory (htlib) for future uses
   * htlib/Makefile.am: back-step with re-inclusion of mktime.c in the
     list of files to be always compiled (caused linking errors 
     for the __mktime_internal function)
   * global: updated with 'autoreconf -if'

Sun Aug 24 12:44:29 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

   * updated with 'autoreconf -if': autoconf 2.57, automake 1.7.6 and
     libtool 1.5.0a (autotools that come with Debian SID)

Sun Aug 24 12:39:34 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

   * configure.in: moved AC_PROG_LEX to AM_PROG_LEX
   * db/configure.in: enabled AM_MAINTAINER_MODE which prevented users without
     autotools to configure and compile the program (relatively to the db
     directory)
   * include/htconfig.h: previously excluded from the branch (severe error!)

Mon Jul 21 20:54:47 CEST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

   * htlib/(malloc|error|lstat|stat|realloc).c: added for cross-compiling
   reasons (as suggested by automake)
   * htlib/error.h: ditto
   * db/acconfig.h: removed as suggested by autotools' new versions
   * configure.in: removed AC_PROG_RANLIB (overriden by AC_PROG_LIBTOOL)
   * updated as of rerun 'autoreconf -if'

Mon Jul 21 10:08:24 CEST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* Patch provided by Marco Nenciarini <mnencia@linux.it> has been
	  completely applied; the patch adds support for detection
	  of standard C++ library
	* all sources using <iostream.h> <fstream.h> <iomanip.h>: modified
	  to use standard ISO C++ library, if present
	* db/configure scripts: modified for autoconf 2.57

Mon Jul 21 09:59:16 CEST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* [.,*]/Makefile.in: regenerated by new automake against new configure.in