@@ -4067,7 +4067,7 @@ http://www.htdig.org/
 	this type before internal parsing.
 	There are two internal parsers, for text/html and
 	text/plain.<p>
-	 The parser program takes four command-line
+	The parser program takes four command-line
 	parameters, not counting any parameters already
 	given in the command string:<br>
 	<em>infile content-type URL configuration-file</em><br>
@@ -4199,7 +4199,7 @@ http://www.htdig.org/
 		<td>
 		  An URL that points at an image that is part of
 		  the document.
-		</td>
+        </td>
 	  </tr>
 	  <tr>
 		<th rowspan="3" valign="top"> m </th>
@@ -13743,7 +13743,7 @@ form during indexing and translated for results.
 			<em>default:</em>
 		  </dt>
 		  <dd>
-			1
+			10000
 		  </dd>
 		  <dt>
 			<em>block:</em>
@@ -14405,6 +14405,6 @@ form during indexing and translated for results.
 	  </dd>
 	</dl>
 	<hr>
-		Last modified: Sun Jun 15 11:30:11 EST 2003
+		Last modified: gio ago 28 10:40:24 EST 2003
   </body>
 </html>
